--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "concur": "concurrently \"npm run dev\" \"nodemon ./backend/index.js\""
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
